Fixed y scrollbar

--- a/src/js/components/page-overlay.scss
+++ b/src/js/components/page-overlay.scss
@@ -1,17 +1,19 @@
+$overlay-top-margin: 60px;
+
 .page-overlay-viewport {
 
   position: fixed;
-
-  top: 60px;
+  top: $overlay-top-margin;
   bottom: 0;
   left: 0;
   right: 0;
-
+  padding: 0;
+  margin: 0;
   width: 100%;
-  height: 100vh;
-
   max-width: 100%;
-  max-height: 100%;
+
+  //height: calc(100vh - #{$overlay-top-margin});
+
   z-index: 1000;
 
   overflow: hidden;
@@ -24,14 +26,12 @@
       position: relative;
       margin-top: 10px;
       margin-right: 10px;
+      overflow: hidden;
       .close-button {
 
       }
-
-
     }
     width: 100%;
-    max-height: 100%;
     overflow-y: auto;
   }
 }
